src/test/deca/context/invalid/return_valeur_dans_void.deca
// Description :
// Une méthode void (sas return) ne peut pas retourner une valeur.

// Resultats :
// Echec

class Joueur {
    void courir() {
        return 10;
    }
}

{ }